fix new_trip form on mobile

--- a/app/assets/stylesheets/trip_form.scss
+++ b/app/assets/stylesheets/trip_form.scss
@@ -58,6 +58,12 @@
       margin-bottom: 10px;
     }
 
+    @media (max-width: 768px) {
+      .status-header {
+        font-size: 13px;
+      }
+    }
+
     .status-description {
       text-align: center;
       color: $main-grey;
